@@ -1,3 +1,9 @@
+2005-04-03  Callum McKenzie  <callum@physics.otago.ac.nz>
+
+	* glines.c: Convert to using GRand rather than rand. Remove some
+	necessary includes (and convert some from "" -> <>). Inspired by
+	bug #172376 from Marco Colombo.
+
 2005-03-31  Richard Hoelscher  <rah@rahga.com>
 
 	* glines.c (fullscreen_callback): Leave setting of the fullscreen
